<resources>
    <string name="app_name">tugasmodul2</string>
    <string name="judul">Universitas Trunojoyo</string>
    <string name="isi">Selamat datang di Aplikasi\nMilik Universitas Trunojoyo</string>
    <string name="edit">Masukkan nama kamu</string>
    <string name="judul_artikel1">Panen Raya Jagung Dan Integrated Farming UTM 2021</string>
    <string name="isi_artikel1">Panen Raya Jagung Program Klaster Jagung Madura dan Integrated Farming 2021 Oleh Universitas Trunojoyo Madura (UTM) dan Bank Indonesia (BI) berlangsung kemarin di Desa Moncek Timur, Kecamatan Lenteng, Sumenep, itu dihadiri Kepala Perwakilan BI Jawa Timur Harso Utomo, Dekan fakultas pertanian UTM, Perwakilan Bupati Sumenep, koordinator Balai Pengawasan dan Sertifikasi Benih Tanaman Pangan dan Hortikultura (BPSBTPH) Jawa Timur Wilayah 1 Surabaya, dan Perwakilan Forkopimka Sumenep. Program Klaster Jagung Madura dan Integrated Farming di Madura seluas 120 hektare tersebar di 3 kabupaten. Masing-masing Bangkalan 40 hektare, Pamekasan 20 hektare, dan Sumenep 60 hektare.
        \n\n Panen raya kali ketiga ini merupakan pilot project yang bisa menjadi contoh untuk pengembangan jagung daerah lain di Pulau Madura. Juga dapat menghasilkan produk turunan jagung untuk meningkatkan nilai jual dari jagung itu sendiri. ”Program ini bermula karena Madura punya potensi,” ucapnya ungkap Ketua Klaster Jagung Madura Dr Ahmad Amzeri, S.P., M.P.
        \n\n Jagung Madura 3 memiliki keunggulan yakni, produksi tinggi ( 6 -7 Ton/hektar), Adaptif kekeringan, umur genjah (85-90hst), dan harga benih terjangkau. Kami yakin dengan Inovasi Jagung Madura ini, Madura 3 suatu saat menjadi primadona disektor pangan khususnya jagung di Indonesia. Inilah inovasi dari Madura untuk Indonesia.</string>
    <string name="judul_artikel2">Konser Paduan Suara Golden ke-5</string>
    <string name="isi_artikel2">Bangkalan, 16 Desember 2015-Unit Kegiatan Mahasiswa Paduan Suara Golden Universitas Trunojoyo Madura adakan Konser ke limanya dengan tema Anak-anak, acara ini dilaksanakan pada hari Rabu 16 Desember 2015 Pukul 18.00 di Aula Gedung Auditorium Universitas Trunojoyo Madura.
        \n\n Acara ini dihadiri oleh Mahasiswa Universitas Trunojoyo Madura, Paduan Suara UNAIR, Paduan Suara Ngudia Husada Madura, Paduan Suara IKIP Bangkalan serta Kepala Sekolah SDN Banyuajuh 2 dan Kepala SDN Banyuajuh 4 beserta siswanya. Acara ini berlangsung sangat meriah penampilan paduan suara siswa SDN Banyuajuh 2 yang menyanyikan Lagu Trunojoyo. Serentak ikut bernyanyi 179 Peserta yang hadir memadati Aula Gedung Auditorium. Satu persatu penampilan dari UKM Paduan Suara Golden membuat Ruangan semakin meriah.
        \n\n Hadir juga Ibu R. Sri Kentjanawati, S. Sos., MM, Pembina UKM Golden yang mana ibu wati mewakili Wakil Rektor III Bidang Kemahasiswa yang hari itu berhalangan hadir. Acara ini dibuka oleh ibu R. Sri Kentjanawati, S. Sos., MM dengan pemotongan tumpeng sebagai simbolis. Pada sambutannya ibu wati mengatakan “Paduan Suara Golden adalah salah satu dari 19 Unit Kegiatan Mahasiswa (UKM) Universitas Trunojoyo Madura yang tidak perlu diragukan lagi Prestasi-Prestasinya, Prestasi Tingkat Nasionalpun pernah diraih Paduan Suara Golden Universitas Trunojoyo Madura. Dan untuk selanjutnya semoga Paduan Suara Golden dapat semakin baik dan semoga PS Golden dapat mengukir prestasinya di tingkat Internasional”.
        \n\n Dalam kegiatan ini ada beberapa hal yang menarik, pasalnya dalam kegiatan ini di kemas dengan serba anak-anak, dari dekorasi hingga dari penampilannya. Kegiatan ini bertujuan untuk mengembalikan kecintaan anak-anak yang mana dulunya anak-anak sering menyanyikan lagu anak-anak namun sekarang sudah sedikit anak-anak yang menyanyikan lagu anak-anak.</string>
    <string name="judul_artikel3">Tim Robot UTM</string>
    <string name="isi_artikel3">Universitas Trunojoyo Madura (UTM) memiliki Tim Robot yang sudah banyak menorehkan berbagai berprestasi baik di tingkat regional maupun nasional.
        \n\n Perhelatan Kontes Robot Indonesia (RKI) Regional IV yang bertempat di Politeknik Negeri Malang pada 1-3 Mei 2018 kemarin. Tim Robot Pemadam Api UTM berhasil masuk 5 besar yang otomatis berkesempatan berlaga di ajang Kontes Robot Indonesia tingkat Nasional.
        \n\n Ada lima kategori perlombaan pada perhelatan KRI Regional IV tersebut, diantaranya adalah Kontes Robot ABU Indonesia (KRAI), Kontes Robot Pemadam Api Indonesia (KRPAI), Kontes Robot Seni Tari Indonesia (KRSTI), Kontes Robot Sepak Bola Indonesia (KRSBI) Humanoid, dan Kontes Robot Sepak Bola Indonesia (KRSBI) beroda.
        \n\n Sekitar 30 lebih Perguruan Tinggi baik Negeri maupun Swasta berpartisipasi pada perhelatan KRI Regional IV tersebut. Pada ajang tersebut juga, UTM mengirimkan dua tim robot, diantaranya adalah Tim Robot Pemadam Api dan Tim Robot Sepak Bola Beroda.</string>
    <string name="isi_profile">Universitas Trunojoyo Madura atau UTM adalah perguruan tinggi negeri yang terletak di Kamal, Kabupaten Bangkalan, Jawa Timur, Pulau Madura, Indonesia. Universitas Trunojoyo Madura dahulu merupakan universitas swasta yang resmi menjadi perguruan tinggi negeri berdasarkan Keputusan Presiden tanggal 5 Juli 2001. Perguruan tinggi ini diresmikan pada tanggal 23 Juli 2001 oleh Presiden Abdurrahman Wahid. Universitas Trunojoyo Madura merupakan perguruan tinggi negeri ke-7 di Jawa Timur.</string>
</resources>