<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Halaman_Beranda">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="203dp"
            android:layout_height="27dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="172dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/judul"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="65dp"
            android:layout_height="23dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="310dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Beranda"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/buttonLogo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="23dp"
            android:background="@null"
            android:src="@drawable/logo_utm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="138dp"
            android:layout_height="23dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="237dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Aktivitas Kegiatan"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="210dp"
            android:src="@drawable/gambar1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:src="@drawable/gambar2"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="210dp"
            android:src="@drawable/gambar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="27dp"
            android:src="@drawable/gambar4"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="326dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Artikel"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="259dp"
            android:src="@drawable/foto_artikel1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="228dp"
            android:layout_height="35dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/judul_artikel1"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:layout_width="228dp"
            android:layout_height="51dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:text="@string/isi_artikel1"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="259dp"
            android:src="@drawable/foto_artikel2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="228dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/judul_artikel2"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:layout_width="228dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:text="@string/isi_artikel2"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="259dp"
            android:src="@drawable/foto_artikel3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="228dp"
            android:layout_height="20dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/judul_artikel3"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:layout_width="228dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="@string/isi_artikel3"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@id/textView10" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>